--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,13 @@ body, * {
   font-family: 'Lato Regular';
   src: url(./assets/fonts/lato-regular.woff2);
 }
+
+.pointer{
+  background-color: #fff;
+  border-radius: 100%;
+  height: 28px;
+  width: 28px;
+  border: solid 1px rgb(223, 231, 233);
+  box-shadow: 0 4px 8px 0 rgba(34, 64, 71, 0.2);
+  cursor: pointer;
+}
